force-app/main/default/objects/com_smartsheet__DL_History2__c/com_smartsheet__DL_History2__c.object-meta.xml
<CustomObject>
    <label>DL_History2</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DL_History2</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>