force-app/main/default/objects/com_smartsheet__DL_History2__c/fields/com_smartsheet__configId__c.field-meta.xml
<CustomField>
    <fullName>com_smartsheet__configId__c</fullName>
    <label>configId</label>
    <referenceTo>com_smartsheet__DL_Config__c</referenceTo>
    <relationshipLabel>DL_History2</relationshipLabel>
    <relationshipName>DL_History2</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>