force-app/main/default/objects/com_smartsheet__DL_History2__c/fields/com_smartsheet__queueId__c.field-meta.xml
<CustomField>
    <fullName>com_smartsheet__queueId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>queueId</label>
    <referenceTo>com_smartsheet__DL_Queue2__c</referenceTo>
    <relationshipLabel>DL_History2</relationshipLabel>
    <relationshipName>DL_History2</relationshipName>
    <type>Lookup</type>
</CustomField>