force-app/main/default/objects/com_smartsheet__DL_History2__c/fields/com_smartsheet__status__c.field-meta.xml
<CustomField>
    <fullName>com_smartsheet__status__c</fullName>
    <label>status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>new</fullName>
                <default>true</default>
                <label>new</label>
            </value>
            <value>
                <fullName>queued</fullName>
            </value>
            <value>
                <fullName>initializing</fullName>
            </value>
            <value>
                <fullName>waiting for salesforce to process</fullName>
            </value>
            <value>
                <fullName>processing</fullName>
            </value>
            <value>
                <fullName>complete</fullName>
            </value>
            <value>
                <fullName>error</fullName>
            </value>
            <value>
                <fullName>canceled</fullName>
            </value>
            <value>
                <fullName>completed with warnings</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>